:sparkles: update the certificate of scope and clouseres
update the certificate of scope and clouseres

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "curso-asincronismo"]
 	path = curso-asincronismo
 	url = git@github.com:KevCode53/curso-asincronismo.git
+[submodule "curso-scope-clousere"]
+	path = curso-scope-clousere
+	url = git@github.com:KevCode53/curso-scope-clousere.git
