:sparkles: start the javascript professional course
start the javascript professional course

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "curso-scope-clousere"]
 	path = curso-scope-clousere
 	url = git@github.com:KevCode53/curso-scope-clousere.git
+[submodule "javascript-professional-course"]
+	path = javascript-professional-course
+	url = git@github.com:KevCode53/javascript-professional-course.git
